Fix homepage alignment and UX

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,10 @@
-@media (min-width: 768px) {
-  .navbar-nav.navbar-center {
-    position: absolute;
-    left: 50%;
-    transform: translatex(-50%);
-  }
+@media (min-width: 960px) {
+  .navbar .navbar-nav {
+    display: inline-block;
+    float: none;
+}
+
+.navbar .navbar-collapse  {
+    text-align: center;
+}
 }
